--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <java.version>21</java.version>
     </properties>
