--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,17 @@
             <artifactId>entities</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- povezovanje z bazi -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
