--- a/api/pom.xml
+++ b/api/pom.xml
@@ -40,6 +40,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.3.2</version>
+                <configuration>
+                    <mainClass>com.prpo.chat.api.App</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
