--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
     <name>server-service</name>
 
     <modules>
+        <module>service</module>
         <module>api</module>
         <module>entities</module>
-        <module>service</module>
     </modules>
 
     <dependencyManagement>
@@ -37,6 +37,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.42</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
         </dependency>
     </dependencies>
 
