--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -5,4 +5,4 @@ server:
 spring:
   data:
     mongodb:
-      uri: ${MONGODB_DATABASE}
+      uri: mongodb+srv://nbAdaran:123@users.rmpyjrs.mongodb.net/server-db?appName=users
