--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -6,3 +6,26 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://nbAdaran:123@users.rmpyjrs.mongodb.net/server-db?appName=users
+
+# springdoc:
+#   api-docs:
+#     path: /v3/api-docs
+#   swagger-ui:
+#     path: /swagger-ui
+#   show-actuator: true
+
+management:
+  endpoints:
+    web:
+      cors:
+        allowed-origins: "http://localhost:4200"
+        allowed-methods: "GET"
+        allowed-headers: "*"
+        allow-credentials: false
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+      probes:
+        enabled: true
