--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,4 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-        mvn clean install
+        mvn clean install -DskipTests
