--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8031
   address: 0.0.0.0
 
-spring:
-  data:
-    mongodb:
-      uri: mongodb+srv://nbAdaran:123@users.rmpyjrs.mongodb.net/server-db?appName=users
+#spring:
+#  data:
+#    mongodb:
+#      uri: mongodb+srv://nbAdaran:123@users.rmpyjrs.mongodb.net/server-db?appName=users
 
 # springdoc:
 #   api-docs:
